feat: add feature adm package

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@devpr/feature-adm": ["devpr-org/feature-adm/src/index.ts"],
       "@devpr/feature-conf": ["devpr-org/feature-conf/src/index.ts"],
       "@devpr/feature-jobs": ["devpr-org/feature-jobs/src/index.ts"]
     }
